<resources>
    <string name="app_name">QuadraticCalculator</string>

    <string name="a">a = </string>
    <string name="action_settings">Settings</string>
    <string name="b">b = </string>
    <string name="c">c = </string>
    <string name="submit">Solve</string>
    <string name="x1">X1=</string>
    <string name="x2">X2=</string>
    <string name="x1result">1</string>
    <string name="x2result">2</string>
    <string name="test">derp</string>
    <string name="prefs">Preferences</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>

    <string name="hello_world">Hello world!</string>
    <string name="help_intro">Hello, this app solves Quadratic equations.
    To solve simply input the quotients of your equation and hit solve.</string>
    <string name="help_contd">After pressing \"Solve\" the solutions for both possible values are displayed. A \"Doesn\'t Exist\" value means that one or more solutions do not exist.</string>
    <string name="help_contd2">Press the \"Clear\" button to clear the screen and start again.</string>
    <string name="clear_button">Clear</string>
    <string name="main_menu">Calculator</string>
    <string name="title_activity_preference">Preferences</string>
    <string name="pref_description1">Save quotients from last session?</string>
    <string name="pref_description2">Round to how many decimal places?</string>

    <string-array name="decimals_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Show all</item>
    </string-array>

    <string name="validation_empty">Can\'t be empty.</string>
    <string name="validation_number">Input a valid number</string>

</resources>
