<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/holo_blue_light">
        <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_width="match_parent">
            <TextView
                android:text="@string/a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="0"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:id="@+id/a"
                android:layout_column="1"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/b"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="2"
                android:layout_weight="1"/>

            <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"


            android:id="@+id/b"
            android:layout_column="3"
            android:layout_weight="1"/>

            <TextView
                android:text="@string/c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_column="4"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"

                android:id="@+id/c"
                android:layout_column="5"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:id="@+id/submit"
                android:layout_weight="1"/>

        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/x1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/x1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <TextView
                android:id="@+id/result1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />


        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/x2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/x2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <TextView
                android:id="@+id/result2"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                 />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button"
                android:id="@+id/clear_button"
                android:layout_column="21" />
        </TableRow>


    </TableLayout>


</LinearLayout>
