<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="company.com.quadraticcalculator.Help"
    android:id="@+id/hel_layout">

    <TextView android:text="@string/help_intro" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_intro" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="22dp"
        android:src="@drawable/tutorial1"
        android:layout_below="@+id/help_intro"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/help_contd"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/tutorial2"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_contd2"
        android:id="@+id/textView2"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/tutorial3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
